Service Views done / Create and Update has bug

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a asp-action="###" asp-controller="Controller" class="nav-link">
+                <a asp-action="Index" asp-controller="Service" class="nav-link">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Service Table</span>
                 </a>
