--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -64,14 +64,14 @@
                             <h3>Login</h3>
                         </div>
                         <div class="form-floating mb-3">
-                            <input asp-for="UsernameOrEmail" type="email" class="form-control" placeholder="farid@example.com or 50zade">
+                            <input asp-for="UsernameOrEmail" type="text" class="form-control" placeholder="farid@example.com or 50zade">
                             <label asp-for="UsernameOrEmail">Email address or Username</label>
                         </div>
                         <div class="form-floating mb-4">
                             <input asp-for="Password" type="password" class="form-control" placeholder="Password">
                                 <label asp-for="Password">Password</label>
                         </div>
-                            <button asp-controller="Home" asp-action="Index" type="submit" class="btn btn-primary py-3 w-100 mb-4">Login</button>
+                            <button asp-controller="Account" asp-action="Login" type="submit" class="btn btn-primary py-3 w-100 mb-4">Login</button>
                             <p class="text-center mb-0">Don't have an Account? <a asp-controller="Account" asp-action="Register">Register</a></p>
                     </div>
 
