--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -83,7 +83,7 @@
                                 <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Password">
                                 <label asp-for="ConfirmPassword">Confirm Password</label>
                         </div>
-                        <button asp-controller="Account" asp-action="Login" type="submit" class="btn btn-primary py-3 w-100 mb-4">Register</button>
+                        <button asp-controller="Account" asp-action="Register" type="submit" class="btn btn-primary py-3 w-100 mb-4">Register</button>
                             <p class="text-center mb-0">Already have an Account? <a asp-controller="Account" asp-action="Login">Sign In</a></p>
                     </div>
                     </form>
